# libgit2-glib

./: .gitignore  .gitlab-ci.yml  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  libgit2-glib-1.0.pc.in  libgit2-glib.doap  meson.build  meson_options.txt  meson_python_compile.py  meson_vapi_link.py
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
builddir/examples/: clone  general  walk
builddir/libgit2-glib/: ggit-enum-types.c  ggit-enum-types.h  ggit.h  libgit2-glib-1.0.so.0  libgit2-glib-1.0.so.0.2708.0  libgit2-glib-1.0.vapi
builddir/libgit2-glib/5746dcd@@git2-glib-1.0@sha/: Ggit_1.0_gir_filelist  libgit2-glib-1.0.so.0.2708.0.symbols
builddir/meson-logs/: install-log.txt  meson-log.txt
builddir/meson-private/: libgit2-glib-1.0.pc
builddir/tests/: repository
docs/reference/: .gitignore  Makefile.am  libgit2-glib-1.0-docs.sgml  libgit2-glib-1.0-sections.txt  libgit2-glib-1.0.types  libgit2-glib-docs.sgml  libgit2-glib.toml.in  meson.build  urlmap.js
examples/: Makefile.am  clone.c  general.c  meson.build  walk.c
libgit2-glib/: Ggit.py  Makefile.am  ggit-annotated-commit.c  ggit-annotated-commit.h  ggit-autocleanup.h  ggit-blame-options.c  ggit-blame-options.h  ggit-blame.c  ggit-blame.h  ggit-blob-output-stream.c  ggit-blob-output-stream.h  ggit-blob.c  ggit-blob.h  ggit-branch-enumerator.c  ggit-branch-enumerator.h  ggit-branch.c  ggit-branch.h  ggit-checkout-options.c  ggit-checkout-options.h  ggit-cherry-pick-options.c  ggit-cherry-pick-options.h  ggit-clone-options.c  ggit-clone-options.h  ggit-commit-parents.c  ggit-commit-parents.h  ggit-commit.c  ggit-commit.h  ggit-config-entry.c  ggit-config-entry.h  ggit-config.c  ggit-config.h  ggit-convert.c  ggit-convert.h  ggit-cred-plaintext.c  ggit-cred-plaintext.h  ggit-cred-ssh-interactive.c  ggit-cred-ssh-interactive.h  ggit-cred-ssh-key-from-agent.c  ggit-cred-ssh-key-from-agent.h  ggit-cred.c  (+133 more)
src/: Makefile.am  ggit-blob.c  ggit-blob.h  ggit-commit.c  ggit-commit.h  ggit-error.c  ggit-error.h  ggit-object-private.h  ggit-object.c  ggit-object.h  ggit-oid.c  ggit-oid.h  ggit-repository.c  ggit-repository.h  ggit-signature.c  ggit-signature.h  ggit-tag.c  ggit-tag.h  ggit-types.h  ggit-utils.c  ggit-utils.h  ggit.h  git-glib-error.c  git-glib-error.h  git-glib-object-private.h  git-glib-object.c  git-glib-object.h  git-glib-oid.c  git-glib-oid.h  git-glib-repository.c  git-glib-repository.h  git2-glib-repository.c  git2-glib-repository.h
tests/: Makefile.am  meson.build  repository.c
tools/: coverage.py
tools/clang/: cindex.py
